--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Social Media App",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "dev": "node -r dotenv/config --watch server.js",
     "start": "node server.js"
